[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[lib]
name = "watcher_lib"
path = "src/lib.rs"

[[bin]]
name = "watcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
glob = "0.3.3"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
