[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[lib]
name = "watcher_lib"
path = "src/lib.rs"

[[bin]]
name = "watcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bitflags = { version = "2.11.0", features = ["serde"] }
dirs = "6.0.0"
flexi_logger = "0.31.8"
glob = "0.3.3"
ignore = "0.4.25"
log = "0.4.29"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.23.0", features = ["v4"] }
